Fix box-shadow bug on Firefox

--- a/.localhost/css/main.css
+++ b/.localhost/css/main.css
@@ -178,7 +178,6 @@ thead {
 thead tr {
 	position: relative;
 	z-index: 100;
-	box-shadow: 0 0 15px rgba(0,0,0,1);
 }
 
 th {
